@startuml model
!include ../style/commons.style

package service.food{
    enum Conversion{}
}
package model {
    package food {
        enum Month {
            JANUARY,
            FEBRUARY,
            MARCH,
            APRIL,
            MAY,
            JUNE,
            JULY,
            AUGUST,
            SEPTEMBER,
            OCTOBER,
            NOVEMBER,
            DECEMBER;

            - value: String <<final>>
            ~ BY_VALUE: Map<String, Month> <<static final>>
            + this(value: String): Month
            + getValue(): String
            + of(value: String): Month
        }
    
        class Food {
            - name: String
            - type: String
            - availability: List<Month>
            - days: int
            - weight: int
            - bulk: boolean
            + this(): Food
            + this(name: String, type: String, availability: Month[], days: int, weight: int, bulk: boolean): Food
            + getName(): String
            + getType(): String
            + getAvailability(): List<Month>
            + getDays(): int
            + getWeight: int
            + getBulk: boolean
        }
        class ConversionRequest{
            - type: Conversion
            - quantity: double
            - food: String
            + this():ConversionRequest
            + getType(): Conversion
            + setType(type: Conversion): void
            + getQuantity(): double
            + setQuantity(quantity: double): void
            + getFood(): String
            + setFood(food: String): void
        }
    }

    package fridge {
        class FoodElement {
            - id: UUID
            - insertionDate: String
            - peremptionDate: String
            - quantity: int
            + this(): FoodElement
            + this(insertionDate: String, peremptionDate: String, quantity: int): FoodElement
            + this(id: UUID, insertionDate: String, peremptionDate: String, quantity: int): FoodElement
            + getID(): UUID
            + getInsertionDate(): String
            + getPeremptionDate(): String
            + getQuantity(): int
            + setQuantity(quantity: int): void
        }

        class FridgeFood {
            - id: UUID
            - name: String
            - products: Map<UUID, FoodElement>
            - this(): FridgeFood
            + this(name: String, products: List<FoodElement>): FridgeFood
            + this(id: UUID, name: String, products: List<FoodElement>): FridgeFood
            + getID(): UUID
            + getName(): String
            + getProducts(): List<FoodELement>
            + getProducts2(): Map<UUID, FoodElement>
            + addProduct(element: FoodElement): void
            + addAllProducts(elements: List<FoodElement>): void
        }

        class FridgeFoodBuilder {
            - id: UUID
            - name: String
            - products: Map<UUID, FoodElement>
            + withId(id: UUID): FridgeFoodBuilder
            + withName(name: String): FridgeFoodBuilder
            + withProducts(food: List<FoodElement>): FridgeFoodBuilder
            + createFridgeFood(): FridgeFood
        }

        class UpdateResponse {
            - id: UUID
            - fridgeFood: String
            - quantity: int
            + this(): UpdateResponse
            + this(id: UUID, fridgeFood: String, quantity: int): UpdateResponse
            + getId: UUID
            + setId(id: UUID): void
            + getFridgeFood(): String
            + setFridgeFood(fridgeFood: String): void
            + getQuantity(): int
            + setQuantity(quantity: int): void
        }

        class DeleteResponse {
            - id: UUID
            - fridgeFood: String
            + this(): DeleteResponse
            + this(id: UUID, fridgeFood: String): DeleteResponse
            + getId: UUID
            + setId(id: UUID): void
            + getFridgeFood(): String
            + setFridgeFood(fridgeFood: String): void
        }
    }

    package recipe {
        class Ingredient {
            - name: String
            - quantity: String
            - this(): Ingredient
            + this(name: String, quantity: String): Ingredient
            + getName(): String
            + getQuantity(): String
            + setName(name: String): void
            + setQuantity(quantity: String): void
            + enum Unit {KG, G, NONE}
            + getUnit(name: String): Unit <<static>>
            + extractName(ingredient: Ingredient): String <<static>>
        }

        class Recipe {
            - name: String 
            - steps: List<String> 
            - servings: int 
            - preparation: int 
            - difficulty: int 
            - rating: double
            - link: String
            - ingredients: List<Ingredient>
            - this(): Recipe
            + this(name: String, steps: List<String>, servings: String, duration: String, difficulty: String, link: String, avis: String, ratingfract: String, ingredients: List<Ingredient>): MarmitonRecipe
            + getServings(): String
            + getDifficulty(): String
            + getIngredients(): List<Ingredient>
            + getLink(): String
            + getName(): String
            + getRating(): double
            + getSteps(): List<String>
            + getPreparation(): int
        }

        package external {
            class MarmitonRecipe {
                ~ link: String
                ~ name: String 
                ~ ratingfract: String
                ~ opinion: String
                ~ steps: List<String> 
                ~ preparation: String
                - servings: String
                - difficulty: String
                - ingredients: List<Ingredient>
                - rating: String
                + this(): MamitonRecipe
                + this(link: String, name: String, steps: List<Sting>, duration: String, difficulty: String, opinion: String, ratingfract: String, rating: String, ingredients: List<Ingredients>)
                + getServings(): String
                + setServings(servings: String): void
                + getRating(): String
                + setRating(rating: String): void
                + getDifficulty(): String
                + setDifficulty(difficulty: String): void
                + getIngredients(): List<Ingredient>
                + setIngredients(ingredients: List<Ingredient>): void
                + getLink(): String
                + setLink(link: String): void
                + getName(): String
                + setName(name: String): void
                + getRatingfract(): String
                + setRatingfract(ratingfract: String): void
                + getOpinion(): String
                + setOpinion(opinion: String): void
                + getSteps(): List<String>
                + setSteps(steps: List<String>): void
                + getPreparation(): String
                + setPreparation(duration: String)
                
            }
        }
    }
    package shopping{
        class ShoppingElement{
            - name: String
            - quantity: double
            + this(): ShoppingElement
            + getName(): String
            + setName(name: String)
            + getQuantity(): quantity
            + setQuantity(quantity: double)
        }
    }

    Food *--> Month

    FridgeFood *..> FoodElement
    FridgeFoodBuilder *..> FridgeFood

    Recipe *..> Ingredient
    MarmitonRecipe *..> Ingredient

    ConversionRequest o..> Conversion
}
    
@enduml